--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">CashBox</string>
-    <string name="textView2">ко-ко-ко</string>
+    <string name="app_name">CBService</string>
 </resources>
