--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="login_failed">"Login failed"</string>
     <string name="title">"CBService"</string>
     <string name="phone">"+7 ("</string>
+    <string name="phone_number">"Номер телефона"</string>
+    <string name="phone_mask">"+7 (___) ___-__-__"</string>
+    <string name="pass_mask">"* * * * * * * *"</string>
+    <string name="login">"Войти"</string>
+    <string name="pass">"Пароль"</string>
 </resources>
