--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,6 @@
     <string name="pass">"Пароль"</string>
     <string name="reg">"Ещё нет аккаунта? Создать"</string>
     <string name="title_activity_orders_tab">orders_tab</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_1">Активные заявки</string>
+    <string name="tab_text_2">Завершённые заявки</string>
 </resources>
