--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,9 +16,16 @@
     <string name="phone_mask">"+7 (___) ___-__-__"</string>
     <string name="pass_mask">"* * * * * * * *"</string>
     <string name="login">"Войти"</string>
+    <string name="code">"Получить код"</string>
     <string name="pass">"Пароль"</string>
     <string name="reg">"Ещё нет аккаунта? Создать"</string>
     <string name="title_activity_orders">Заявки</string>
+    <string name="log">"Вернуться к форме авторизации"</string>
     <string name="tab_text_1">Активные заявки</string>
     <string name="tab_text_2">Завершённые заявки</string>
+    <string name="requests">"Заявки"</string>
+    <string name="name">"Имя"</string>
+    <string name="email">"e-mail (по желанию)"</string>
+    <string name="nameHint">"Андрей"</string>
+    <string name="emailHint">"example@gmail.com"</string>
 </resources>
