--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="login_failed">"Login failed"</string>
     <string name="title">"CBService"</string>
     <string name="phone">"+7 ("</string>
+    <string name="save">"Сохранить"</string>
     <string name="phone_number">"Номер телефона"</string>
     <string name="phone_mask">"+7 (___) ___-__-__"</string>
     <string name="pass_mask">"* * * * * * * *"</string>
