--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,14 @@
     <string name="profile_phone">"+7 (999) 777-77-77"</string>
     <string name="my_stores">"Мои торговые точки"</string>
     <string name="quit">"Выйти из профиля"</string>
+    <string name="change_photo">"Изменить фото"</string>
+    <string name="contacts">"Контактная информация"</string>
+    <string name="email_hint">"E-mail не заполнен"</string>
+    <string name="change_pass">"Изменить пароль"</string>
+    <string name="old_pass">"Старый пароль"</string>
+    <string name="new_pass">"Новый пароль"</string>
+    <string name="new_pass_again">"Повторите новый пароль"</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
