--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -265,6 +265,8 @@
     <string name="add">"Добавить"</string>
     <string name="select_model">"Выберите модель"</string>
     <string name="enter_name_hint">"Введите название"</string>
+    <string name="region">"Регион"</string>
+    <string name="city">"Город"</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
